added routes template
